--- a/shop.html
+++ b/shop.html
@@ -162,7 +162,7 @@
 <a href="financing.html">Financing</a>
 <a href="projects.html">Projects</a>
 <a href="contact.html">Contact</a>
-<!--<a href="cart.html">🛒 Cart</a>-->
+<a href="cart.html">🛒 Cart</a>
 </nav>
 </header>
 <div class="container">
