--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8"/>
   <title>Solar Kit Calculator - WattSun Solar</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="main.css"/>
   <style>
     body { background:#fafafa; }
@@ -46,6 +45,7 @@
       .container { max-width:97vw; }
       .calc-grid { grid-template-columns: 1fr; }
     }
+    /* Button styles for result */
     .calc-btn-row {
       display: flex;
       flex-direction: column;
@@ -111,19 +111,20 @@
 <header>
   <div class="header-bar">
     <h1>WattSun Solar</h1>
-    <button class="nav-toggle" aria-label="Open menu">&#9776;</button>
+    <button class="nav-toggle" aria-label="Menu" onclick="toggleNav()">&#9776;</button>
   </div>
   <nav>
     <a href="index.html">Home</a>
     <a href="solutions.html">Solutions</a>
     <a href="shop.html">Shop</a>
+    <a href="calculator.html">Calculator</a>
     <a href="financing.html">Financing</a>
     <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
-    <!--<a href="cart.html">🛒 Cart</a>-->
   </nav>
 </header>
   <div class="container">
+    <!-- TITLE AND SIZING TABLE BUTTON ROW -->
     <div style="display:flex; align-items:center; justify-content:center; gap:18px; margin-bottom:16px;">
       <h2 style="margin-bottom:0; font-size:2.1em; font-weight:700; color:#222;">Solar Kit Calculator</h2>
       <button type="button" id="showSizingBtn"
@@ -212,6 +213,7 @@
 <footer>
     &copy; 2025 WattSun Solar Kenya | <div class="footer-contacts"><a href="mailto:info@wattsun.co.ke">info@wattsun.co.ke</a></div>
 </footer>
+
 <!-- Sizing Table Side Panel -->
 <div id="sizingPanel" style="
   position:fixed; top:0; right:-420px; width:390px; height:100vh; z-index:2001;
@@ -263,18 +265,14 @@
     *For indicative purposes. Final kit sizing should be confirmed after site survey.
   </div>
 </div>
+<!-- Overlay for side panel -->
 <div id="sizingOverlay"></div>
-<script>
-  // Hamburger mobile menu JS
-  const navToggle = document.querySelector('.nav-toggle');
-  const header = document.querySelector('header');
-  navToggle.addEventListener('click', function() {
-    header.classList.toggle('nav-open');
-  });
-  document.querySelectorAll('header nav a').forEach(link => {
-    link.addEventListener('click', () => header.classList.remove('nav-open'));
-  });
 
+<script>
+  // Hamburger nav for mobile
+  function toggleNav() {
+    document.querySelector('header').classList.toggle('nav-open');
+  }
   // Accordion toggle
   function toggleSection(sectionId) {
     var sec = document.getElementById(sectionId);
@@ -352,18 +350,11 @@
   }
   // Save selection to localStorage and go to checkout
   function goToCheckout(kitName, totalWatt, price) {
-    // Add to "cart" as array for compatibility with cart/checkout pages
-    let cart = JSON.parse(localStorage.getItem('wattSunCart') || '[]');
-    // Remove any previous calculator kit (to avoid duplicates)
-    cart = cart.filter(item => !item.isCalculatorKit);
-    cart.push({
-      name: kitName,
+    localStorage.setItem('wattSunSelectedKit', JSON.stringify({
+      kit: kitName,
       power: totalWatt,
-      price: price,
-      quantity: 1,
-      isCalculatorKit: true
-    });
-    localStorage.setItem('wattSunCart', JSON.stringify(cart));
+      price: price
+    }));
     window.location.href = 'checkout.html';
   }
 
