--- a/financing.html
+++ b/financing.html
@@ -4,7 +4,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <meta charset="utf-8"/>
   <title>Flexible Solar Financing Options</title>
-  <link href="main.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="main.css"/>
   <style>
     body {
       background: #f7f7f7;
@@ -96,7 +96,6 @@
   </style>
 </head>
 <body>
-<!-- Header: Use global, main.css-driven markup ONLY -->
 <header>
   <div class="header-bar">
     <h1>WattSun Solar</h1>
@@ -109,11 +108,10 @@
     <a href="financing.html">Financing</a>
     <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
-    <!-- <a href="cart.html">🛒 Cart</a> -->
+    <a href="cart.html">🛒 Cart</a>
   </nav>
 </header>
 
-<!-- Main content -->
 <div class="container">
   <h2>Flexible Solar Financing Options</h2>
   <p>
